--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "metal-bands-final",
+  "name": "stanley-jeong-acs-1320-final",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stanjdev.github.io",
+  "homepage": "https://stanjdev.github.io/stanley-jeong-acs-1320-final/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
